# audio-identifier-rust

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-compose.yml  justfile  rustfmt.toml
.github/workflows/: general.yml
.sqlx/: query-e17d21a143483409b9f7ddd6b6f4fcda7a262fec08d3239b9e4e140e20bffee3.json
algorithm/: Cargo.toml
algorithm/migrations/: 20250308110054_songs.up.sql  20250308110115_fingerprints.down.sql  20250308110115_fingerprints.up.sql
algorithm/src/: main.rs  schema.rs  youtube.rs
algorithm/src/audio/: constellation.rs  match_fingerprints.rs  mod.rs  sample.rs
algorithm/src/model/: mod.rs
configuration/: base.yml  production.yml
docker/postgres/: 001-init.sh
examples/: quick_dev.rs
migrations/: 20250308110054_songs.up.sql  20250311165143_create_songs_table.down.sql  20250311165143_create_songs_table.up.sql  20250315000746_create_fingerprints_table.down.sql  20250315000746_create_fingerprints_table.up.sql  20250318094304_add_status_to_subscription.up.sql  20250318095325_make_status_not_null_in_subscriptions.down.sql  20250318095325_make_status_not_null_in_subscriptions.up.sql  20250318103557_create_subscription_tokens_table.down.sql  20250318103557_create_subscription_tokens_table.up.sql
server/: Cargo.toml  configuration.yml
server/migrations/: 20250311165143_create_songs_table.down.sql  20250311165143_create_songs_table.up.sql
server/src/: configuration.rs  main.rs  startup.rs  telemetry.rs
server/src/routes/: health_check.rs  mod.rs  song.rs
server/tests/: health_check.rs
src/: configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs  youtube.rs
src/audio/: constellation.rs  fingerprint.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/model/: mod.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  song.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/subscriptions/: error.rs  helpers.rs  mod.rs  post.rs
src/routes/subscriptions/confirm/: mod.rs
src/youtube/: download.rs  mod.rs  search.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  songs.rs  subscriptions.rs  subscriptions_confirm.rs
