[package]
name = "shazam-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"


itertools = "0.14.0"
num-complex = "0.4.6"
reqwest = "0.12.12"
rodio = "0.20.1"
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
rustfft = "6.2.0"
rustube = "0.6.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "rust_decimal",
    "sqlite",
    "bigdecimal",
] }
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
