[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4.40", features = ["clock"] }
config = { version = "0.15", features = ["yaml"] }
hyper = "1.6"
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
rust_decimal_macros = "1.36.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
    "bigdecimal",
] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.20.0"


[dev-dependencies]
claims = "0.8.0"
fake = { version = "4.0.0" }
proptest = "1.6.0"
rand = "0.9.0"
reqwest = "0.12.12"
