[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock"] }
config = { version = "0.15", features = ["yaml"] }
hyper = "1.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"
serde_with = "3.12.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
] }
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "full",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1.12"
uuid = { version = "1.16", features = ["v4"] }
validator = "0.20"


[dev-dependencies]
claims = "0.8.0"
fake = { version = "4.0.0" }
proptest = "1.6.0"
rand = "0.9.0"
serde_json = "1.0.140"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
wiremock = "0.6.3"
