[package]
name = "audioIdentifier-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
dotenvy = "0.15"
itertools = "0.14"
num-complex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rodio = { version = "0.20", features = ["symphonia-all"] }
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
rustfft = "6.2"
rusty_ytdl = { git = "https://github.com/Mithronn/rusty_ytdl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "rust_decimal",
    "sqlite",
    "bigdecimal",
] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"
