[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
hyper = "1.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4"] }


[dev-dependencies]
reqwest = "0.12.12"
